# junction_reconstruction

./: .gitignore  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  README.md  fitted_curve.txt  test_curve.txt  test_roads.txt
pcl_wrapper/include/: pcl_wrapper_types.h
proto/: gps_trajectory.proto
resources/: main_window.ui
src/: CMakeLists.txt  axis_indicator.cpp  axis_indicator.h  camera_manipulator.cpp  camera_manipulator.h  color_map.cpp  color_map.h  common.cpp  common.h  customized_shader_program.h  information.cpp  information.h  main.cpp  main_window.cpp  main_window.h  openstreetmap.h  osg_utility.cpp  osg_utility.h  osg_viewer_widget.cpp  osg_viewer_widget.h  pick_handler.cpp  pick_handler.h  point_intersector.cpp  point_intersector.h  renderable.cpp  renderable.h  sample.cpp  sample.h  scene_widget.cpp  scene_widget.h  stateset_manipulator.cpp  stateset_manipulator.h  threaded_painter.cpp  threaded_painter.h  toggle_handler.cpp  toggle_handler.h  trajectories.cpp  trajectories.h  trajectory.cpp  trajectory.h  (+2 more)
src/core/: distance_graph.cpp  distance_graph.h  features.cpp  features.h  graph.cpp  graph.h  latlon_converter.cpp  latlon_converter.h  openstreetmap.cpp  openstreetmap.h  road_generator.cpp  road_generator.h  segment.cpp  segment.h  symbol.cpp  symbol.h  tensor_voting.cpp  tensor_voting.h  trajectories.cpp  trajectories.h
src/display/: color_map.cpp  color_map.h  customized_shader_program.cpp  main_window.cpp  main_window.h  renderable.h  scene_widget.cpp  scene_widget.h
src/exec/: main.cpp
src/osmium/include/osmium/: handler.hpp  input.hpp
src/osmium/include/osmium/handler/: coordinates_for_ways.hpp
src/osmium/include/osmium/input/: pbf.hpp
src/osmium/include/osmium/osm/: node.hpp  relation.hpp  way.hpp
src/pcl_wrapper/: CMakeLists.txt
src/pcl_wrapper/include/: pcl_utility.h  pcl_wrapper_exports.h  pcl_wrapper_types.h
src/pcl_wrapper/src/: pcl_utility.cpp  pcl_wrapper.cpp
src/resources/: main_window.ui
src/util/: cgal_types.h  common.cpp  common.h  pcl_types.cpp  pcl_types.h
